--- a/app/public/modules/tasks/views/task-slots.client.view.html
+++ b/app/public/modules/tasks/views/task-slots.client.view.html
@@ -23,7 +23,7 @@
 					<button class="btn btn-primary btn-circle btn-outline"><i class="fa fa-times" aria-hidden="true"></i></button>
 				</td>
 				<td ng-if="done==true" class="text-right">
-					<span class="badge badge-primary">
+					<span class="badge badge-primary done-label">
 						<i class="fa fa-chevron-down" aria-hidden="true"></i>
 						Done
 					</span>
