--- a/app/public/modules/events/views/list-events.client.view.html
+++ b/app/public/modules/events/views/list-events.client.view.html
@@ -1,10 +1,10 @@
 <ul class="nav nav-second-level in collapse" data-ng-controller="EventsListController" data-ng-init="find()">
-	<li data-ng-repeat="event in events | orderBy:'days.startDate'" class="event-list-item">
+	<li data-ng-repeat="event in events | orderBy:'days.startTime'" class="event-list-item">
 		<a data-ng-href="#!/events/{{event._id}}/edit" class="clearfix">
 			<span class="nav-label event-name pull-left" data-ng-bind="event.title"></span>
 			<div class="event-date pull-right">
-				<span class="event-day">{{ event.days.startDate | date:'EEEE' }}</span>
-				<span class="event-time">{{ event.days.startDate | date:'HH:mm' }}</span>
+				<span class="event-day">{{ event.days.startTime | date:'EEEE' }}</span>
+				<span class="event-time">{{ event.days.startTime | date:'HH:mm' }}</span>
 			</div>
 
 		</a>
