--- a/app/public/modules/users/views/authentication/signup.client.view.html
+++ b/app/public/modules/users/views/authentication/signup.client.view.html
@@ -1,27 +1,27 @@
 <h1 class="app-logo only-mobile">Make It Happen</h1>
 <h2 class="auth-title">Registration</h2>
-<form name="userForm" data-ng-controller="AuthenticationController" data-ng-submit="signup(userForm.$valid)" class="form-horizontal" novalidate autocomplete="off">
+<form name="signupForm" data-ng-controller="AuthenticationController" data-ng-submit="signup(signupForm.$valid)" class="form-horizontal" novalidate autocomplete="off">
 	<fieldset>
-		<div class="form-group" ng-class="{'has-error':  userForm.submitted && userForm.email.$invalid || userForm.email.$dirty && userForm.email.$invalid}">
+		<div class="form-group" ng-class="{'has-error':  signupForm.submitted && signupForm.email.$invalid || signupForm.email.$dirty && signupForm.email.$invalid}">
 			<label for="email">Email</label>
 			<input type="email" id="email" name="email" class="form-control" data-ng-model="credentials.email" placeholder="Email" required>
-			<div ng-show="userForm.submitted || userForm.email.$dirty" class="error-message">
-				<p ng-show="userForm.email.$error.required" class="help-block error-text">Please enter your email</p>
-				<p ng-show="userForm.email.$error.email" class="help-block error-text">Please enter a valid email</p>
+			<div ng-show="signupForm.submitted || signupForm.email.$dirty" class="error-message">
+				<p ng-show="signupForm.email.$error.required" class="help-block error-text">Please enter your email</p>
+				<p ng-show="signupForm.email.$error.email" class="help-block error-text">Please enter a valid email</p>
 			</div>
 		</div>
-		<div class="form-group" ng-class="{'has-error':  userForm.submitted && userForm.username.$invalid || userForm.username.$dirty && userForm.username.$invalid}">
+		<div class="form-group" ng-class="{'has-error':  signupForm.submitted && signupForm.username.$invalid || signupForm.username.$dirty && signupForm.username.$invalid}">
 			<label for="username">Username</label>
 			<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username" required>
-			<div ng-show="userForm.submitted || userForm.username.$dirty" class="error-message">
-				<p ng-show="userForm.username.$error.required" class="help-block error-text">Please enter your username</p>
+			<div ng-show="signupForm.submitted || signupForm.username.$dirty" class="error-message">
+				<p ng-show="signupForm.username.$error.required" class="help-block error-text">Please enter your username</p>
 			</div>
 		</div>
-		<div class="form-group" ng-class="{'has-error':  userForm.submitted && userForm.password.$invalid || userForm.password.$dirty && userForm.password.$invalid}">
+		<div class="form-group" ng-class="{'has-error':  signupForm.submitted && signupForm.password.$invalid || signupForm.password.$dirty && signupForm.password.$invalid}">
 			<label for="password">Password</label>
 			<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password" required password-validator ng-change="validatePassword()" ng-blur="notifyIfInvalid()">
-			<div ng-show="userForm.submitted" class="error-message">
-				<p ng-show="userForm.username.$error.required" class="help-block error-text">Please enter your password</p>
+			<div ng-show="signupForm.submitted" class="error-message">
+				<p ng-show="signupForm.username.$error.required" class="help-block error-text">Please enter your password</p>
 			</div>
 			<script type="text/ng-template" id="validationErrorsTmp.html">
 				<div ng-show="errors.length > 0">
