[EPMKHRDMH-201] Refactor Rendering tasks in the calendar

--- a/app/public/modules/calendar/views/calendar.client.view.html
+++ b/app/public/modules/calendar/views/calendar.client.view.html
@@ -2,7 +2,7 @@
 <div class="wrapper calendar-wrapper" data-ng-controller="CalendarController as calendar">
 	<div class="row">
 		<div class="col-lg-12 ibox">
-			<div ui-calendar="calendar.uiConfig.calendar" class="calendar ibox-content" data-ng-model="calendar.eventSources"></div>
+			<div ui-calendar="calendar.uiConfig.calendar" class="calendar ibox-content" data-ng-model="calendar.eventSources" calendar="main"></div>
 		</div>
 	</div>
 </div>
