--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -59,6 +59,7 @@ textarea {
 	left: 0;
 	height: 100%;
 	width: 300px;
+  	overflow-y: auto;
 
   &__category-control {
 	width: 100%;
@@ -115,6 +116,7 @@ textarea {
 .main-content {
 	transition: margin .6s;
 	position: relative;
+  	height: 100%;
 	z-index: 2;
 
 	&.with-sidebar {
