Added style fixes for notification tooltip

--- a/app/public/modules/notifications/less/notifications.less
+++ b/app/public/modules/notifications/less/notifications.less
@@ -1,3 +1,40 @@
 .progress-chart > svg {
   width: 100% !important;
 }
+
+.dropdown-alerts.dropdown-menu.notifications-dropdown {
+  padding-top: 15px;
+
+  .notification-item {
+	padding: 5px;
+  }
+
+  .notification-link {
+	padding: 0 15px 0 0;
+	color: #676a6c;
+	&:hover {
+	  color: #1AB394;
+	}
+  }
+
+  .notification-control {
+	padding-top: 10px;
+	border-top: 1px solid #ddd;
+	text-align: center;
+	padding-bottom: 0;
+	&:hover {
+	  background: none;
+	  color: #1AB394;
+	}
+  }
+
+  .slot-controls .btn {
+	width: 25px;
+	height: 25px;
+	padding: 4px 2px;
+	i {
+	  font-size: 14px;
+	}
+  }
+}
+
