EPMKHRDMH-191: display user info in the header after authorization

--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -185,7 +185,14 @@ textarea {
 		cursor: pointer;
 		font-size: 1.5em;
 	}
-
+	&__username {
+	  max-width: 150px;
+	  display: inline-block;
+	  white-space: nowrap;
+	  overflow: hidden;
+	  text-overflow: ellipsis;
+	  vertical-align: middle;
+	}
 }
 
 .nav-user-profile {
