--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -1,7 +1,7 @@
-<div data-ng-controller="HeaderController" data-ng-show="authentication.user"
+<div data-ng-controller="HeaderController as vm" data-ng-show="vm.authentication.user"
 	 class="navbar navbar-static-top border-bottom">
 	<div class="navbar-header">
-		<a class="navbar-minimalize minimalize-styl-2 btn btn-primary" data-ng-click="toggleSidebar()">
+		<a class="navbar-minimalize minimalize-styl-2 btn btn-primary" data-ng-click="vm.toggleSidebar()">
 			<i class="fa fa-bars" aria-hidden="true"></i>
 		</a>
 
@@ -19,7 +19,7 @@
 
 		<li class="dropdown nav-user-profile">
 			<a class="dropdown-toggle" type="button" data-toggle="dropdown">
-				<span data-ng-bind="authentication.user.username ? authentication.user.username : 'username'"
+				<span data-ng-bind="vm.authentication.user.username ? vm.authentication.user.username : 'username'"
 					  class="navbar-header__username"></span>
 				<img src="modules\users\img\profiles\default.jpg"
 					 class="profile-image img-circle">
