EPMKHRDMH-203: Show info text for empty lists

--- a/app/public/modules/notifications/views/list-notifications.client.view.html
+++ b/app/public/modules/notifications/views/list-notifications.client.view.html
@@ -8,8 +8,8 @@
 			</a>
 		</li>
 	</ul>
-	<div class="text-center"
+	<div class="text-center text-muted"
 		 data-ng-hide="!notifications.$resolved || notifications.length">
-		No Notifications yet
+		No Notifications yet.
 	</div>
 </section>
