EPMKHRDMH-203: Show info text for empty lists

--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -156,6 +156,11 @@ textarea {
   padding-left: 5px;
 }
 
+.p-y-1 {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 .notifications-info .label {
   line-height: 12px;
   padding: 2px 5px;
