--- a/app/public/modules/events/views/list-events.client.view.html
+++ b/app/public/modules/events/views/list-events.client.view.html
@@ -10,8 +10,7 @@
 			</a>
 		</li>
 	</ul>
-	<div class="text-center text-muted"
-		 data-ng-hide="!events.$resolved || events.length">
+	<div class="text-center text-muted p-y-1" data-ng-hide="!events.$resolved || events.length">
 		No events yet. <br/> Please, click on <span class="fa fa-plus-circle"></span> to add new one.
 	</div>
 </section>
