--- a/app/public/modules/notifications/views/list-notifications.client.view.html
+++ b/app/public/modules/notifications/views/list-notifications.client.view.html
@@ -8,8 +8,7 @@
 			</a>
 		</li>
 	</ul>
-	<div class="text-center text-muted"
-		 data-ng-hide="!notifications.$resolved || notifications.length">
+	<div class="text-center text-muted p-y-1" data-ng-hide="!notifications.$resolved || notifications.length">
 		No Notifications yet.
 	</div>
 </section>
