--- a/app/public/modules/tasks/views/list-tasks.client.view.html
+++ b/app/public/modules/tasks/views/list-tasks.client.view.html
@@ -19,8 +19,7 @@
 			</a>
 		</li>
 	</ul>
-	<div class="text-center text-muted"
-		 data-ng-hide="!tasks.$resolved || tasks.length">
+	<div class="text-center text-muted p-y-1" data-ng-hide="!tasks.$resolved || tasks.length">
 		No tasks yet. <br/> Please, click on <span class="fa fa-plus-circle"></span> to add new one.
 	</div>
 </section>
