EPMKHRDMH-191: fix displaying username

--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -19,7 +19,7 @@
 
 		<li class="dropdown nav-user-profile">
 			<a class="dropdown-toggle" type="button" data-toggle="dropdown">
-				<span data-ng-bind="vm.authentication.user.username ? vm.authentication.user.username : 'username'"
+				<span data-ng-bind="vm.user.username ? vm.user.username : 'username'"
 					  class="navbar-header__username"></span>
 				<img src="modules\users\img\profiles\default.jpg"
 					 class="profile-image img-circle">
