--- a/app/public/modules/core/less/variables.less
+++ b/app/public/modules/core/less/variables.less
@@ -11,6 +11,11 @@
 @main-bg-color: #F5F5F5;
 @error-message-color: #a94442;
 
+/* naming from http://www.color-blindness.com/color-name-hue/ */
+@color-dark-pink: #e84f5e;
+@color-sun: #f28832;
+@color-mountain-meadow: #19b293;
+@color-mid-grey: #676a6c;
 
 /* Variables for authorization pages */
 
