--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -27,12 +27,14 @@
 								</div>
 								<div class="field-group">
 									<label class="field-label" for="priority">Priority*</label>
-									<select name="priority" id="priority" class="form-control" data-ng-model="newTask.priority" ng-init="newTask.priority='1'">
-										<option value="1">Urgent and Important</option>
-										<option value="2">Important not Urgent</option>
-										<option value="3">Urgent not Important</option>
-										<option value="4">Not Important not urgent</option>
-									</select>
+									<div data-ng-class="'item-priority-' + newTask.priority">
+										<select name="priority" id="priority" class="form-control item-priority" data-ng-model="newTask.priority">
+											<option value="1" class="item-priority-1">Urgent and Important</option>
+											<option value="2" class="item-priority-2">Not Urgent but Important</option>
+											<option value="3" class="item-priority-3">Urgent but not Important</option>
+											<option value="4" class="item-priority-4">Not Urgent and not Important</option>
+										</select>
+									</div>
 									<div ng-show="validationError.priority" class="error">
 										{{validationError.priority.message}}
 									</div>
