--- a/app/public/modules/tasks/views/list-tasks.client.view.html
+++ b/app/public/modules/tasks/views/list-tasks.client.view.html
@@ -12,7 +12,7 @@
 	</div>
 	<ul class="nav nav-second-level in collapse">
 		<li data-ng-repeat="task in tasks | orderBy: sortType : sortReverse" class="task-list-item">
-			<a data-ng-href="#!/tasks/{{task._id}}" class="task-list-item">
+			<a data-ng-href="#!/tasks/{{task._id}}/edit" class="task-list-item">
 				<span class="task-priority fa fa-circle {{'task-priority-' + task.priority}}"></span>
 				<span class="nav-label task-name" data-ng-bind="task.title"></span>
 				<span class="pull-right label label-danger"> 0% </span>
